// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloorItemRow Component Renders a FloorItem 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "space-evenly",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#757575",
          "fontSize": 12,
          "lineHeight": 22,
        }
      }
    >
      [missing "en.ITEM.ITEM" translation] 980078597
    </Text>
    <Text
      style={
        Object {
          "lineHeight": 22,
        }
      }
    >
      Nature Valley Sweet and Salty Granola Bars
    </Text>
    <Text
      style={
        Object {
          "color": "#757575",
          "lineHeight": 22,
        }
      }
    >
      $2.40
    </Text>
  </View>
</View>
`;

exports[`FloorItemRow Component Renders a FloorItem with a long name 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "space-evenly",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#757575",
          "fontSize": 12,
          "lineHeight": 22,
        }
      }
    >
      [missing "en.ITEM.ITEM" translation] 980078597
    </Text>
    <Text
      style={
        Object {
          "lineHeight": 22,
        }
      }
    >
      An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description
    </Text>
    <Text
      style={
        Object {
          "color": "#757575",
          "lineHeight": 22,
        }
      }
    >
      $2.40
    </Text>
  </View>
</View>
`;
